@@ -9,8 +9,6 @@
 	<key>IBOpenObjects</key>
 	<array>
 		<integer>32</integer>
-		<integer>354</integer>
-		<integer>815</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>7D24</string>
